codex-rs/tui/src/app/snapshots/codex_tui__app__warnings_tests__warnings_page.snap
---
source: tui/src/app/warnings_tests.rs
expression: "crate::chatwidget::tests::helpers::normalize_snapshot_paths(screen)"
---
Earlier transcript row 12
Earlier transcript row 13
Earlier transcript row 14
Earlier transcript row 15
Earlier transcript row 16
Earlier transcript row 17
Earlier transcript row 18
Earlier transcript row 19
Earlier transcript row 20
Earlier transcript row 21
Earlier transcript row 22

  Warnings · 1 of 1 · Warning

  Example warning
  Full diagnostic with remediation.







  k keep & next · esc dismiss & close · ⌃o copy · ←/→ warning · ↓ scroll
